# new_agent

ag/: README.md  pyproject.toml  report.md
ag/src/ag/: crew.py  main.py
ag/src/ag/config/: agents.yaml  tasks.yaml
deepr1/: .env.example  README.md  agentstack.json  pyproject.toml
deepr1/src/: crew.py  main.py
deepr1/src/config/: agents.yaml  tasks.yaml
flowagent/: README.md  pyproject.toml  report.md
flowagent/src/flowagent/: MyFlow.py  crew.py  main.py
flowagent/src/flowagent/config/: tasks.yaml
flowagent/src/flowagent/tools/: custom_tool.py
n8n/: Book_table.json  Update_table.json  checkTableAvailability.json
