[project]
name = "ag"
version = "0.1.0"
description = "ag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ag = "ag.main:run"
run_crew = "ag.main:run"
train = "ag.main:train"
replay = "ag.main:replay"
test = "ag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
